src/objects/BRP_Vendors_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Is_Active_Vendor__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields> 
    <fields>
        <fullName>Is_Used_For_Parts_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Used For Parts Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Used_For_Parts_Ordering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Used For Parts Ordering</label>
        <type>Checkbox</type>
    </fields>
    <label>BRP Vendors List</label>
</CustomObject>